--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -58,103 +58,19 @@
     </div>
     <h2 class="hidden">Advantages</h2>
     <ul class="about-advantages-list list">
-      <li class="about-advantages-list__item">
-        <picture>
-          <source
-            srcset="
-              ./images/desktop/made-icon-desktop-1-1x.png 1x,
-              ./images/desktop/made-icon-desktop-1-2x.png 2x
-            "
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="
-              ./images/tablet/made-icon-tablet-1-1x.png 1x,
-              ./images/tablet/made-icon-tablet-1-2x.png 2x
-            "
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="
-              ./images/mobile/made-icon-mobile-1-1x.png 1x,
-              ./images/mobile/made-icon-mobile-1-2x.png 2x
-            "
-            media="(min-width:320px)"
-          />
-          <img
-            src="./images/desktop/made-icon-desktop-1-1x.png"
-            alt="ice-cream"
-            class="about-advantages-list__img"
-          />
-        </picture>
+      <li class="about-advantages-list__item first">
         <h3 class="about-advantages-list__title">721</h3>
         <p class="about-advantages-list__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="about-advantages-list__item">
-        <picture>
-          <source
-            srcset="
-              ./images/desktop/made-icon-desktop-2-1x.png 1x,
-              ./images/desktop/made-icon-desktop-2-2x.png 2x
-            "
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="
-              ./images/tablet/made-icon-tablet-2-1x.png 1x,
-              ./images/tablet/made-icon-tablet-2-2x.png 2x
-            "
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="
-              ./images/mobile/made-icon-mobile-2-1x.png 1x,
-              ./images/mobile/made-icon-mobile-2-2x.png 2x
-            "
-            media="(min-width:320px)"
-          />
-          <img
-            src="./images/desktop/made-icon-desktop-2-1x.png"
-            alt="ice-cream"
-            class="about-advantages-list__img"
-          />
-        </picture>
+      <li class="about-advantages-list__item second">
         <h3 class="about-advantages-list__title">16kg</h3>
         <p class="about-advantages-list__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="about-advantages-list__item">
-        <picture>
-          <source
-            srcset="
-              ./images/desktop/made-icon-desktop-3-1x.png 1x,
-              ./images/desktop/made-icon-desktop-3-2x.png 2x
-            "
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="
-              ./images/tablet/made-icon-tablet-3-1x.png 1x,
-              ./images/tablet/made-icon-tablet-3-2x.png 2x
-            "
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="
-              ./images/mobile/made-icon-mobile-3-1x.png 1x,
-              ./images/mobile/made-icon-mobile-3-2x.png 2x
-            "
-            media="(min-width:320px)"
-          />
-          <img
-            src="./images/desktop/made-icon-desktop-3-1x.png"
-            alt="ice-cream"
-            class="about-advantages-list__img"
-          />
-        </picture>
+      <li class="about-advantages-list__item third">
         <h3 class="about-advantages-list__title">84</h3>
         <p class="about-advantages-list__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
