--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="made">
   <div class="container">
     <p class="about__top-text">tradition and love</p>
     <h2 class="about__top-title">how it’s made?</h2>
