--- a/src/sass/_product.scss
+++ b/src/sass/_product.scss
@@ -21,6 +21,17 @@
   text-transform: uppercase;
 
   color: #ffa5ba;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
 }
 
 .section-products__title {
@@ -34,4 +45,14 @@
   text-transform: uppercase;
 
   color: $primary-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
 }
