--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,7 @@
             </svg>
           </a>
         </div>
-        <div class="contact">
+        <div class="contact--footer">
           Feel free to contact
           <a href="tel:+61(0)383766284" class="contact__link"
             >+61 (0) 383 766 284</a
