--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -4,7 +4,6 @@
 }
 .footer-wrap {
   align-items: baseline;
- 
 }
 .wrap {
   display: flex;
@@ -45,7 +44,7 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  color: $primary-color; 
+  color: $primary-color;
   @media screen and (max-width: 767px) {
     display: block;
     font-size: 34px;
@@ -76,11 +75,12 @@
 .social__icon {
   fill: #ffa5ba;
 
-  &:hover , &:focus {
+  &:hover,
+  &:focus {
     fill: $primary-color;
   }
 }
-.contact{
+.contact--footer {
   display: flex;
   justify-content: flex-end;
   font-family: 'DM Sans';
@@ -105,7 +105,7 @@
   line-height: 1.87;
   letter-spacing: 0.02em;
   padding-left: 5px;
-  
+
   color: $primary-color;
   @media screen and (max-width: 767px) {
     display: block;
@@ -124,7 +124,7 @@
   font-size: 14px;
   line-height: 2.14;
   letter-spacing: 0.02em;
-  
+
   color: $text-grey-color;
   border-top: 1px solid #e1e1e1;
 }
