--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,12 +1,11 @@
-@import url(/Users/joker/Desktop/GoIT_course_material/parcel-project-template/node_modules/modern-normalize/modern-normalize.css);
+@import '../../node_modules/modern-normalize/modern-normalize.css';
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 h1,
@@ -42,14 +41,12 @@ ul {
   padding-right: 20px;
   padding-left: 20px;
 }
-
 @media screen and (min-width: 768px) {
   .container {
     padding-right: 32px;
     padding-left: 32px;
   }
 }
-
 @media screen and (min-width: 1280px) {
   .container {
     padding-right: 16px;
@@ -70,4 +67,708 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/*# sourceMappingURL=index.css.map */
+
+.header {
+  background-color: #ffb8ca;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .header .container {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.header__logo {
+  display: flex;
+}
+
+.tel-menu-open {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .tel-menu-open {
+    margin-left: auto;
+    margin-right: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tel-menu-open {
+    display: none;
+  }
+}
+
+.header__tablet-button {
+  background: #ffffff;
+  border-radius: 28px;
+  width: 160px;
+  height: 44px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #c7133e;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .header__tablet-button {
+    display: none;
+  }
+}
+
+.header__tablet-button:hover,
+.header__tablet-button:focus {
+  background-color: #ecebeb;
+}
+
+.tablet-buttot-svg {
+  margin-left: 14px;
+}
+
+.header-nav__list {
+  display: flex;
+  padding: 0;
+}
+@media screen and (max-width: 1279px) {
+  .header-nav__list {
+    display: none;
+  }
+}
+
+.header-nav__item:not(:last-child) {
+  margin-right: 35px;
+}
+
+.header-nav__link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav__link:hover,
+.header-nav__link:focus {
+  color: #d41443;
+}
+
+/* tell menu */
+.tel-menu.is-hidden {
+  pointer-events: painted;
+  visibility: visible;
+  transform: translate(0px, 0px);
+  filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
+}
+
+.tel-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 58px;
+  transform: translate(100%, 0px);
+  background-color: #e17992;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .tel-menu {
+    width: 254px;
+  }
+}
+
+.tel-menu-close {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  right: 20px;
+}
+
+.tel-menu__button {
+  background: #ffffff;
+  border-radius: 28px;
+  width: 209px;
+  height: 44px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  cursor: pointer;
+  color: #c7133e;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .tel-menu__button {
+    width: 186px;
+  }
+}
+
+.tel-menu__button:hover,
+.tel-menu__button:focus {
+  background-color: #ecebeb;
+}
+
+.tel-buttot-svg {
+  margin-left: 28px;
+}
+@media screen and (min-width: 768px) {
+  .tel-buttot-svg {
+    margin-left: 21px;
+  }
+}
+
+.tel-menu__item {
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.tel-menu__list {
+  padding: 0;
+}
+
+.tel-menu__link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  color: #ffffff;
+  padding-left: 20px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tel-menu__link:hover,
+.tel-menu__link:focus {
+  color: #d41443;
+}
+
+.div1 {
+  width: 300px;
+  height: 700px;
+  background-color: blue;
+}
+
+.div2 {
+  width: 300px;
+  height: 700px;
+  background-color: black;
+}
+
+.div3 {
+  width: 300px;
+  height: 700px;
+  background-color: aquamarine;
+}
+
+.div4 {
+  width: 300px;
+  height: 700px;
+  background-color: red;
+}
+
+.div5 {
+  width: 300px;
+  height: 700px;
+  background-color: blue;
+}
+
+.galerry {
+  background-image: linear-gradient(to bottom, #fff5f6 40%, #fff 60%);
+  min-height: 122px;
+}
+@media screen and (min-width: 768px) {
+  .galerry {
+    min-height: 264px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .galerry {
+    min-height: 430px;
+  }
+}
+
+.container {
+  width: 320px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+  }
+}
+
+.gallery__box:not(:first-child) {
+  margin-left: 2px;
+}
+@media screen and (min-width: 1280px) {
+  .gallery__box:not(:first-child) {
+    margin-left: 5px;
+  }
+}
+
+.gradient {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 192, 203, 0.5);
+  width: 140px;
+  height: 140px;
+}
+
+.gallery__img-box {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  width: 38px;
+  height: 38px;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .gallery__img-box {
+    width: 87px;
+    height: 87px;
+    border-radius: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__img-box {
+    width: 140px;
+    height: 140px;
+    border-radius: 35px;
+  }
+}
+.gallery__img-box:hover .galerry__see {
+  opacity: 1;
+}
+.gallery__img-box:hover .gallery__img {
+  position: absolute;
+  transform: scale(1.3) rotate(5deg);
+}
+
+.galerry__see {
+  padding: 0;
+  margin: 0;
+  font-size: 40px;
+  font-weight: bold;
+  color: #fff;
+  background-color: rgba(255, 192, 203, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 500ms ease;
+}
+
+.one {
+  background-color: rgb(0, 255, 255);
+}
+
+.two {
+  background-color: rgb(0, 0, 255);
+}
+
+.three {
+  background-color: green;
+  margin-top: 2px;
+}
+@media screen and (min-width: 1280px) {
+  .three {
+    margin-top: 5px;
+  }
+}
+
+.four {
+  background-color: red;
+  width: 78px;
+  height: 78px;
+  margin-top: 0;
+}
+@media screen and (min-width: 768px) {
+  .four {
+    width: 174px;
+    height: 174px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .four {
+    width: 280px;
+    height: 280px;
+  }
+}
+
+.five {
+  background-color: orange;
+  margin-top: 2px;
+}
+@media screen and (min-width: 1280px) {
+  .five {
+    margin-top: 5px;
+  }
+}
+
+.six {
+  background-color: rgb(210, 105, 30);
+}
+
+.seven {
+  background-color: tomato;
+  margin-top: 2px;
+}
+@media screen and (min-width: 1280px) {
+  .seven {
+    margin-top: 5px;
+  }
+}
+
+.eight {
+  background-color: rgb(0, 0, 0);
+}
+
+.nine {
+  background-color: blueviolet;
+  margin-top: 2px;
+}
+@media screen and (min-width: 1280px) {
+  .nine {
+    margin-top: 5px;
+  }
+}
+
+.ten {
+  background-color: rgb(127, 255, 0);
+}
+
+.tr-one {
+  transform: translateY(5px);
+}
+@media screen and (min-width: 768px) {
+  .tr-one {
+    transform: translateY(15px);
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tr-one {
+    transform: translateY(20px);
+  }
+}
+
+.tr-two {
+  transform: translateY(-5px);
+}
+@media screen and (min-width: 768px) {
+  .tr-two {
+    transform: translateY(-15px);
+  }
+}
+@media screen and (min-width: 768px) {
+  .tr-two {
+    transform: translateY(-20px);
+  }
+}
+
+.tr-three {
+  transform: translateY(3px);
+}
+@media screen and (min-width: 768px) {
+  .tr-three {
+    transform: translateY(8px);
+  }
+}
+@media screen and (min-width: 768px) {
+  .tr-three {
+    transform: translateY(12px);
+  }
+}
+
+.gallery__slide {
+  position: fixed;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 192, 203, 0.5);
+  transition-property: transform, background-color, opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery__bd-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 768px) {
+  .gallery__bd-box {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__bd-box {
+    width: 70%;
+  }
+}
+
+.gallery__window {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  border-radius: 10%;
+  width: 180px;
+  height: 180px;
+}
+@media screen and (min-width: 550px) {
+  .gallery__window {
+    width: 350px;
+    height: 350px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery__window {
+    width: 400px;
+    height: 400px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__window {
+    width: 500px;
+    height: 500px;
+  }
+}
+
+.gallery__bd-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: opacity 500ms ease;
+  width: 180px;
+  height: 180px;
+}
+@media screen and (min-width: 550px) {
+  .gallery__bd-img {
+    width: 350px;
+    height: 350px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery__bd-img {
+    width: 400px;
+    height: 400px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__bd-img {
+    width: 500px;
+    height: 500px;
+  }
+}
+
+.gallery__close {
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  width: 25px;
+  height: 25px;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .gallery__close {
+    width: 45px;
+    height: 45px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__close {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.gallery__btn-close {
+  width: 25px;
+  height: 25px;
+}
+@media screen and (min-width: 768px) {
+  .gallery__btn-close {
+    width: 45px;
+    height: 45px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__btn-close {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.gallery__back {
+  position: absolute;
+  left: 2%;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: left 500ms ease;
+  visibility: hidden;
+}
+@media screen and (min-width: 1000px) {
+  .gallery__back:hover {
+    left: 0;
+  }
+}
+@media screen and (min-width: 550px) {
+  .gallery__back {
+    visibility: visible;
+  }
+}
+
+.gallery__next {
+  position: absolute;
+  right: 2%;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: right 500ms ease;
+  visibility: hidden;
+}
+@media screen and (min-width: 1000px) {
+  .gallery__next:hover {
+    right: 0;
+  }
+}
+@media screen and (min-width: 550px) {
+  .gallery__next {
+    visibility: visible;
+  }
+}
+
+.gallery__bd-toggle {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  padding: 0;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .gallery__bd-toggle {
+    width: 45px;
+    height: 45px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__bd-toggle {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.gallery__btn-toggle {
+  width: 30px;
+  height: 30px;
+}
+@media screen and (min-width: 768px) {
+  .gallery__btn-toggle {
+    width: 45px;
+    height: 45px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__btn-toggle {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.gallery__mobile-btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  flex-basis: 100%;
+}
+@media screen and (min-width: 550px) {
+  .gallery__mobile-btn {
+    display: none;
+  }
+}
+
+.gallery__mb-btn {
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.gallery__mb-back {
+  margin-right: 10px;
+}
+
+.gallery__mb-next {
+  margin-left: 10px;
+}
+
+.gallery__mb-btn {
+  width: 30px;
+  height: 30px;
+}
+
+.gallery__img-visible {
+  opacity: 1;
+}
+
+.galerry__is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0);
+}/*# sourceMappingURL=index.css.map */
